[package]
name    = "stepancheg-server-latest"
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
edition = "2018"

[dependencies]
grpc               = { git = "https://github.com/stepancheg/grpc-rust", branch = "master" }
grpc_protobuf      = { git = "https://github.com/stepancheg/grpc-rust", branch = "master" , package = "grpc-protobuf"}
protobuf           = "2"
futures            = "0.1.*"
futures-cpupool    = "0.1.*"
tls-api            = "0.2.*"
tls-api-native-tls = "0.2.*"

[build-dependencies]
protoc-rust-grpc   = { git = "https://github.com/stepancheg/grpc-rust", branch = "master", package = "protoc-rust-grpc"  }
