[package]
name    = "tikv-server"
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
edition = "2018"

[dependencies]
futures = "0.1"
grpcio = "0.4.6"
protobuf = "2"

[build-dependencies]
protoc-grpcio = "1.1.0"

[lib]
name = "protos"
path = "src/protos/mod.rs"
