[package]
name    = "tonic-server"
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
edition = "2018"

[dependencies]
tonic        = "0.1.0-alpha.6"
bytes        = "0.4"
prost        = "0.5"
prost-derive = "0.5"
tokio        = "0.2.0-alpha.6"

[build-dependencies]
tonic-build  = "0.1.0-alpha.6"
